--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/Clogo.png" />
+    <link rel="icon" type="image/svg+xml" href="/churchLogo-Photoroom.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Christ the King Church</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
